--- a/docker-compose-cli.yaml
+++ b/docker-compose-cli.yaml
@@ -80,7 +80,7 @@ services:
     command: /bin/bash
     volumes:
         - /var/run/:/host/var/run/
-        - ./../chaincode/:/opt/gopath/src/github.com/chaincode
+        - ./../fabric-samples/chaincode/:/opt/gopath/src/github.com/chaincode
 #        - ./../../go/src/:/opt/gopath/src/chaincode
         - ./crypto-config:/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/
         - ./scripts:/opt/gopath/src/github.com/hyperledger/fabric/peer/scripts/
