--- a/docker-compose-cli.yaml
+++ b/docker-compose-cli.yaml
@@ -80,8 +80,8 @@ services:
     command: /bin/bash
     volumes:
         - /var/run/:/host/var/run/
-        - ./../fabric-samples/chaincode/:/opt/gopath/src/github.com/chaincode
-#        - ./../../go/src/:/opt/gopath/src/chaincode
+#        - ./../fabric-samples/chaincode/:/opt/gopath/src/github.com/chaincode
+        - ./../go/src/:/opt/gopath/src/github.com/chaincode
         - ./crypto-config:/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/
         - ./scripts:/opt/gopath/src/github.com/hyperledger/fabric/peer/scripts/
         - ./channel-artifacts:/opt/gopath/src/github.com/hyperledger/fabric/peer/channel-artifacts
