--- a/docker-compose-cli.yaml
+++ b/docker-compose-cli.yaml
@@ -81,7 +81,8 @@ services:
     volumes:
         - /var/run/:/host/var/run/
 #        - ./../fabric-samples/chaincode/:/opt/gopath/src/github.com/chaincode
-        - ./../go/src/:/opt/gopath/src/github.com/chaincode
+#        - ./../go/src/:/opt/gopath/src/github.com/chaincode
+        - ~/go/src/:/opt/gopath/src/github.com/chaincode
         - ./crypto-config:/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/
         - ./scripts:/opt/gopath/src/github.com/hyperledger/fabric/peer/scripts/
         - ./channel-artifacts:/opt/gopath/src/github.com/hyperledger/fabric/peer/channel-artifacts
