--- a/base/peer-base.yaml
+++ b/base/peer-base.yaml
@@ -7,13 +7,13 @@ version: '2'
 
 services:
   peer-base:
-    image: hyperledger/fabric-peer:$IMAGE_TAG
+    image: deonproject/fabric-peer:$IMAGE_TAG
     environment:
       - CORE_VM_ENDPOINT=unix:///host/var/run/docker.sock
       # the following setting starts chaincode containers on the same
       # bridge network as the peers
       # https://docs.docker.com/compose/networking/
-      - CORE_VM_DOCKER_HOSTCONFIG_NETWORKMODE=${COMPOSE_PROJECT_NAME}_byfn
+      - CORE_VM_DOCKER_HOSTCONFIG_NETWORKMODE=${COMPOSE_PROJECT_NAME}_deon
       - FABRIC_LOGGING_SPEC=INFO
       #- FABRIC_LOGGING_SPEC=DEBUG
       - CORE_PEER_TLS_ENABLED=true
@@ -27,7 +27,7 @@ services:
     command: peer node start
 
   orderer-base:
-    image: hyperledger/fabric-orderer:$IMAGE_TAG
+    image: deonproject/fabric-orderer:$IMAGE_TAG
     environment:
       - FABRIC_LOGGING_SPEC=INFO
       - ORDERER_GENERAL_LISTENADDRESS=0.0.0.0
