--- a/docker-compose-cli.yaml
+++ b/docker-compose-cli.yaml
@@ -13,7 +13,7 @@ volumes:
   peer1.org2.example.com:
 
 networks:
-  byfn:
+  deon:
 
 services:
 
@@ -23,7 +23,7 @@ services:
       service: orderer.example.com
     container_name: orderer.example.com
     networks:
-      - byfn
+      - deon
 
   peer0.org1.example.com:
     container_name: peer0.org1.example.com
@@ -31,7 +31,7 @@ services:
       file:  base/docker-compose-base.yaml
       service: peer0.org1.example.com
     networks:
-      - byfn
+      - deon
 
   peer1.org1.example.com:
     container_name: peer1.org1.example.com
@@ -39,7 +39,7 @@ services:
       file:  base/docker-compose-base.yaml
       service: peer1.org1.example.com
     networks:
-      - byfn
+      - deon
 
   peer0.org2.example.com:
     container_name: peer0.org2.example.com
@@ -47,7 +47,7 @@ services:
       file:  base/docker-compose-base.yaml
       service: peer0.org2.example.com
     networks:
-      - byfn
+      - deon
 
   peer1.org2.example.com:
     container_name: peer1.org2.example.com
@@ -55,11 +55,11 @@ services:
       file:  base/docker-compose-base.yaml
       service: peer1.org2.example.com
     networks:
-      - byfn
+      - deon
 
   cli:
     container_name: cli
-    image: hyperledger/fabric-tools:$IMAGE_TAG
+    image: deonproject/fabric-tools:$IMAGE_TAG
     tty: true
     stdin_open: true
     environment:
@@ -93,4 +93,4 @@ services:
       - peer0.org2.example.com
       - peer1.org2.example.com
     networks:
-      - byfn
+      - deon
